# eigenx-templates

./: .gitignore  README.md  templates.json
templates/attested-api/golang/: Dockerfile  go.mod  go.sum
templates/attested-api/golang/src/: main.go
templates/attested-api/python/: README.md  requirements.txt
templates/attested-api/python/src/: main.py
templates/attested-api/rust/: Cargo.toml  Dockerfile  README.md
templates/attested-api/rust/src/: main.rs
templates/attested-api/typescript/: README.md  package-lock.json
templates/attested-api/typescript/src/: index.ts
templates/minimal/golang/: README.md  go.mod  go.sum
templates/minimal/golang/src/: main.go
templates/minimal/python/: README.md
templates/minimal/rust/: Cargo.toml  Dockerfile  README.md
templates/minimal/rust/src/: main.rs
templates/minimal/typescript/: README.md  package-lock.json  package.json
templates/minimal/typescript/scripts/: sendEvent.js  sendEvent.sh
templates/randomness-beacon/: .gitignore
templates/randomness-beacon/golang/: README.md
templates/randomness-beacon/python/: Dockerfile
templates/randomness-beacon/rust/src/: main.rs
templates/randomness-beacon/typescript/: package-lock.json  package.json
