[package]
name = "eigenx-tee-rust-app"
version = "1.0.0"
edition = "2021"

[dependencies]
axum = "0.7"
chrono = { version = "0.4", default-features = false, features = ["std", "clock"] }
dotenvy = "0.15"
ethers-signers = { version = "2.0", default-features = false }
hex = "0.4"
num-bigint = "0.4"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha3 = "0.10"
tokio = { version = "1.39", features = ["macros", "rt-multi-thread", "signal", "net"] }
